--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==7.1.2
 dominate==2.5.2
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
 Flask-Migrate==2.5.3
 Flask-Moment==0.10.0
 Flask-SQLAlchemy==2.4.4
@@ -18,4 +19,3 @@ SQLAlchemy==1.3.20
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
-
